--- a/이코테/그리디_모험가길드.ipynb
+++ b/이코테/그리디_모험가길드.ipynb
@@ -101,6 +101,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------\n",
+    "2회차 풀이 ( 정답 확인 후 풀이완료 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n",
+      " 2 3 1 1 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "data = list(map(int,input().split()))\n",
+    "\n",
+    "result = 0\n",
+    "count = 0\n",
+    "\n",
+    "data.sort()\n",
+    "for i in data:\n",
+    "    count += 1\n",
+    "    if count >= i :\n",
+    "        result += 1\n",
+    "        count = 0\n",
+    "        \n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
