--- a/이코테/그리디_뒤집기.ipynb
+++ b/이코테/그리디_뒤집기.ipynb
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 0001100\n"
+      " 0011101\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "2\n"
      ]
     }
    ],
@@ -100,6 +100,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3번째 풀이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 0011100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "S = input()\n",
+    "\n",
+    "count0 = 0 # 0을 뒤집는 경우\n",
+    "count1 = 0 # 1을 뒤집는 경우\n",
+    "\n",
+    "# 첫번째 원소에 대해서 처리\n",
+    "if S[0] == '0':\n",
+    "    count0 += 1\n",
+    "if S[0] == '1':\n",
+    "    count1 += 1\n",
+    "\n",
+    "# 첫 번째 원소를 기준으로 다음 원소와 다를때마다 경우의수 추가\n",
+    "for i in range(len(S)-1):\n",
+    "    if S[i] != S[i+1] :\n",
+    "        if S[i+1] == '1' : #다음 원소가 1일경우 0을 뒤집는 경우의 수 추가\n",
+    "            count0 += 1\n",
+    "        else : # 다음 원소가 0일경우 1을 뒤집는 경우의 수 추가\n",
+    "            count1 += 1\n",
+    "\n",
+    "print(count0,'', count1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
