--- a/이코테/그리디_큰수의법칙.ipynb
+++ b/이코테/그리디_큰수의법칙.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "내 풀이"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -36,6 +43,54 @@
     "  result += b\n",
     "  M -= 1\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "정답"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 8 3\n",
+      "2 4 5 4 6\n",
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "N , M, K = map(int, input().split())\n",
+    "data = list(map(int, input().split()))\n",
+    "            \n",
+    "data.sort()\n",
+    "first = data[N-1]\n",
+    "second = data[N-2]\n",
+    "result = 0\n",
+    "\n",
+    "\n",
+    "while True :\n",
+    "    for i in range(K) :\n",
+    "        if M == 0 :\n",
+    "            break\n",
+    "        result += first\n",
+    "        M -= 1 \n",
+    "    if M == 0 :\n",
+    "        break\n",
+    "    result += second\n",
+    "    M -= 1\n",
+    "print(result)\n",
+    "        \n",
+    "    \n",
+    "    "
    ]
   }
  ],
