--- a/이코테/그리디_숫자 카드 게임.ipynb
+++ b/이코테/그리디_숫자 카드 게임.ipynb
@@ -40,6 +40,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2번째 푼 답 ( 정답 참고했음 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3 3\n",
+      " 3 1 2\n",
+      " 4 1 4\n",
+      " 2 2 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = map(int,input().split())\n",
+    "result = 0\n",
+    "\n",
+    "for i in range(n) :\n",
+    "    data = list(map(int,input().split()))\n",
+    "    min_value = min(data)\n",
+    "    result = max(result,min_value)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 정답"
    ]
   },
@@ -81,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
