repeat 2 dfs_음료수 얼려먹기
dfs_음료수 얼려먹기 2번째 풀이

--- a/이코테/DFS&BFS_음료수 얼려먹기.ipynb
+++ b/이코테/DFS&BFS_음료수 얼려먹기.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "209cad43-6379-4b6a-9e55-7909e2ce5f57",
    "metadata": {},
    "source": [
     "# 아이디어\n",
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f00806-0bac-49ca-bc18-c2f1e2f44cd6",
    "metadata": {},
    "source": [
     "## 나의 풀이"
@@ -26,15 +24,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17428955-3c9d-4322-90a2-3a1944b2dc32",
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3 3\n",
+      " 001\n",
+      " 010\n",
+      " 101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n행 m열의 얼음판 정보 입력받기\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "# 각 행의 정보 입력받기\n",
+    "graph = []\n",
+    "for i in range(n) :\n",
+    "    graph.append(list(map(int, input())))\n",
+    "\n",
+    "# dfs를 입력하여 특정노드와 연결된 노드들 방문처리 하기\n",
+    "def dfs(x,y) :\n",
+    "    if x < 0 or x >= n or y < 0 or y >= n :\n",
+    "        return False\n",
+    "    if graph[x][y] == 0 :\n",
+    "        graph[x][y] = 1 \n",
+    "        dfs(x-1,y)\n",
+    "        dfs(x+1,y)\n",
+    "        dfs(x,y-1)\n",
+    "        dfs(x,y+1)\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "# 모든 노드에 음료수 채워넣기\n",
+    "result = 0\n",
+    "for i in range(n) :\n",
+    "    for j in range(m) :\n",
+    "        if dfs(i,j) == True :\n",
+    "            result += 1\n",
+    "\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "120d5d81-162a-4b84-a50f-234a00ec068b",
    "metadata": {},
    "source": [
     "## 정답"
@@ -43,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5809e375-b53c-45c4-aeab-9eae27ae3645",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64d7e84-1259-4353-b30a-5df501dbca06",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
